# ppdir

./: .gitignore  404.html  README.md  demo.py  index.html  objects.inv  pyproject.toml  test.py
.github/workflows/: deploy.yml
docs/: mkdocs.yml
docs/docs/: index.md
ppdir/: __init__.py  attr_doc_string.py  class_source_file.py  display.py  get_class_defines.py  main.py  merge.py
search/: search_index.json
